examples/test/testpolicy18724.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18724
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key47: value9
      key35: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value4
          key7: value40
      podSelector:
        matchLabels:
          key1: value31
